2005-09-11 krake:
    * Removed duplicate entry for --search in manpage
    
2005-09-06 krake:
    * Imported kabcclient into KDE's SVN module kdereview
    
2005-09-06 krake:
    * Updated FSF address
    * Fixed Debian packaging files

# Version 0.8.1
2005-08-30 krake:
    * Added installation instructions (INSTALL file)
    * Used dh_make to create a debian subdirectory. It should be possible to
      create Debian packages directly from the unpackaged source archive.
      See INSTALL for hints
      
# Version 0.8
2005-08-28 krake:
    * InputFormats: dialog input for selecting contacts rather than reading input or
      taking commandline input

# Version 0.7.2
2005-08-11 krake:
    * More work on the man page (return values, examples)
    
2005-08-09 krake:
    * Started working on a man page
    
# Version 0.7.1
2005-07-26 krake:
    * Example scripts and CSV templates for creating LaTeX letters

# Version 0.7
2005-07-25 krake:
    * Date parsing/formatting for CSV templates
    * README.csv for information on the usage of CSV templates
    
2005-07-21 krake:
    * Loading and listing of CSV template files
    * InputFormats: CSV (using KAddressBook's CSV templates)
    * OutputFormats: CSV (using KAddressBook's CSV templates)
    
2005-07-15 krake:
    * Mapping of CSV columns to addressee fields using KAddressBook CSV templates

# Version 0.6.2
2005-07-12 krake:
    * Fixed a bug in code for Merge operation. Phonenumbers weren't merged correctly
    * Improved VCard input

# Version 0.6.1:
2005-07-10 krake:
    * Let vcard formats warn about non UTF-8 codec (vCards are supposed to be in UTF-8)
    * Use UTF-8 as the default codec if input or output format is vcard to avoid
      warning in standard use cases.
    
2005-07-09 krake:
    * VCard output format got option to switch vCard version

# Version 0.6
2005-07-02 krake:
    * Commandline options for input and output codecs

2005-07-01 krake:
    * Merge operation

# Version 0.5.2
2005-06-21 krake: